# fangshan

./: .gitignore  Justfile  LICENSE.txt  README.md  build.sc  build.swift  common.sc  flake.nix
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  update.yml
configs/: FangShan.json  FangShanFormal.json  FangShanTestBench.json
elaborator/src/: FangShan.scala  FangShanFormal.scala  FangShanTestBench.scala
fangshan/src/: AXIBundle.scala  FangShan.scala  FangShanALU.scala  FangShanBundle.scala  FangShanEXU.scala  FangShanFormal.scala  FangShanIDU.scala  FangShanIFU.scala  FangShanLSU.scala  FangShanMemory.scala  FangShanRegisters.scala  FangShanTestBench.scala  FangShanUtils.scala
fangshan/src/decoder/: Decoder.scala
fangshan/test/src/alu/: ALUSpec.scala
fangshan/test/src/decoder/: DecoderSpec.scala
fangshan/test/src/simulator/: FSSimulator.scala  Simulator.scala
fangshanemu/: Cargo.toml
fangshanemu/src/: dpi.rs  drive.rs  lib.rs
nix/: overlay.nix
nix/fangshan/: default.nix  dpi-lib.nix  fangshan.nix  vcs.nix  verilated.nix
nix/fangshan/scripts/: vcs-wrapper.sh
nix/pkgs/: mill-builder.nix
nix/pkgs/add-determinism/: default.nix
nix/pkgs/dependencies/: nvfetcher.toml
nix/pkgs/dependencies/_sources/: generated.json  generated.nix
tests/dummy/: default.nix
