[package]
name = "fangshanemu"
version = "0.1.0"
edition = "2021"

[dependencies]
svdpi = { version = "0.0.5" }
rand = "0.9"
num-traits = "0.2.19"
num-bigint = { version = "0.4.6", features = ["rand"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "ansi"] }

[features]
sv2023 = ["svdpi/sv2023"]
trace = []
vpi = ["svdpi/vpi"]

[lib]
crate-type = ["staticlib"]
